tests/expectations/compiler/function/program_core_functions_fail.out
Error [ETYC0372117]: Expected type `[u8; 31]` but type `[u8; 32]` was found.
    --> compiler-test:5:27
     |
   5 |         let d: [u8; 31] = Program::checksum(credits.aleo);
     |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372119]: Received different types `[u8; 32]` and `[u8; 31]` for the operation `assert_neq`.
    --> compiler-test:6:9
     |
   6 |         assert_neq(c, d);
     |         ^^^^^^^^^^^^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372156]: `Program::edition` must be called on a program ID, e.g. `foo.aleo`
    --> compiler-test:8:39
     |
   8 |         let e: u16 = Program::edition(d);
     |                                       ^
Error [ETYC0372117]: Expected type `address` but type `[u8; 31]` was found.
    --> compiler-test:8:39
     |
   8 |         let e: u16 = Program::edition(d);
     |                                       ^
Error [ETYC0372117]: Expected type `u8` but type `u16` was found.
    --> compiler-test:9:21
     |
   9 |         let f: u8 = Program::edition(credits.aleo);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372119]: Received different types `u16` and `u8` for the operation `assert_neq`.
    --> compiler-test:10:9
     |
  10 |         assert_neq(e, f);
     |         ^^^^^^^^^^^^^^^^^
     |
     = Make both operands the same type.
